# Qt-VTK-viewer

./: .clang-format  .cmake-format  .gitignore  ButtonConfigurator.cpp  ButtonConfigurator.h  CMakeCache.txt  CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  Config.cpp  Config.h  ConfigCategory.h  ConfigDetailsDialog.cpp  ConfigParameter.h  Configuration.txt  ConfigurationReader.cpp  ConfigurationReader.h  Element.h  Makefile  ModelReader.cpp  ModelReader.hpp  Parameter.h  QtVtkViewer  README.md  SceneWidget.cpp  SceneWidget.h  SceneWidgetInitializer.cpp  SceneWidgetInitializer.h  SceneWidgetVisualizerProxy.h  SliderConfigurator.cpp  SliderConfigurator.h  StringHandlingMessage.cpp  Visualizer.cpp  Visualizer.h  Visualizer.hpp  app_strings.ini  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+7 more)
.githooks/: pre-commit
.github/workflows/: release--app-image--ubuntu24.04.yml  release--deb-package--ubuntu24.04.yml  release--deb-package-bundled--ubuntu24.04.yml  release-ubuntu22.04.yml  test--build-and-run-tests--ubuntu24.04.yml
config/: Config.cpp  Config.h  ConfigCategory.cpp  ConfigCategory.h  ConfigConstants.h  ConfigParameter.h  iwyu.imp
doc/: CHANGELOG_RUNTIME_MODELS.md  COMMAND_LINE_ARGUMENTS.md  DEVELOPER_GUIDE_MODEL_LOADING.md  Doxyfile  Doxyfile.in  LOAD_MODEL_FROM_DIRECTORY.md  PLUGIN_ARCHITECTURE.md  PLUGIN_COMPLETE_IMPLEMENTATION.md  PLUGIN_GUI_LOADER.md  PLUGIN_QUICKSTART.md  PLUGIN_SYSTEM.md  PLUGIN_SYSTEM_FOR_MODELS_SUMMARY.md  PLUGIN_USER_GUIDE.md  SUBSTATE_PARSING_EXTENSION.md  SUBSTATE_PARSING_TESTS.md  VIEW_MODES.md
examples/: plugin_loader_example.cpp
examples/custom_model_plugin/: CMakeLists.txt  CustomCell.h  CustomModelPlugin.cpp  CustomModelPlugin_Full.cpp  Plugin_FullTemplate.cpp  Plugin_MinimalExample.cpp  README.md  build_plugin.sh  how2BuildSample.txt
examples/model_header_example/: Header.txt  README.md
mainProxyVisualizerGenerator/: mainProxyVisualizerGenerator.cpp
plugins/: .gitkeep  README.md
scripts/: build-bundled-deb.sh  build_plugin.sh  how2BuildSample.txt  posInFile.sh
tests/: CMakeLists.txt  ModelReaderTests.cpp  SettingParameterTests.cpp
utilities/: CellConcept.hpp  CommandLineParser.cpp  CommandLineParser.h  CppModuleBuilder.cpp  CppModuleBuilder.h  ModelLoader.cpp  ModelLoader.h  ModelReader.cpp  ModelReader.hpp  PluginLoader.cpp  PluginLoader.h  ReductionManager.cpp  ReductionManager.h  WaitCursorGuard.cpp  WaitCursorGuard.h  directoryConstants.h  types.h
video/: VideoExporter.cpp
visualiser/: Color.h  Line.h  SettingParameter.cpp  SettingParameter.h  SettingRenderParameter.h  SubstateInfo.h  VideoExporter.cpp  VideoExporter.h  Visualiser.cpp  Visualizer.h  Visualizer.hpp
visualiserProxy/: ISceneWidgetVisualizer.h  SceneWidgetVisualizerAdapter.h  SceneWidgetVisualizerFactory.cpp  SceneWidgetVisualizerFactory.h  SceneWidgetVisualizerProxy.h  SceneWidgetVisualizerProxyBall.h  SceneWidgetVisualizerProxyDefault.h  SceneWidgetVisualizerProxySciddicaT.h
widgets/: AboutDialog.cpp  AboutDialog.h  ClickableLabel.cpp  ClickableLabel.h  ColorSettings.cpp  ColorSettings.h  ColorSettingsDialog.cpp  ColorSettingsDialog.h  ColorSettingsDialog.ui  CompilationLogWidget.cpp  CompilationLogWidget.h  ConfigDetailsDialog.cpp  ConfigDetailsDialog.h  CustomInteractorStyle.cpp  CustomInteractorStyle.h  ReductionDialog.cpp  ReductionDialog.h  ReductionDisplayWidget.cpp  ReductionDisplayWidget.h  ReductionManager.cpp  ReductionManager.h  SceneWidget.cpp  SceneWidget.h  SubstateDisplayWidget.cpp  SubstateDisplayWidget.h  SubstateDisplayWidget.ui  SubstatesDockWidget.cpp  SubstatesDockWidget.h
